# doom_begin

./: CMakeLists.txt  Makefile  doom  wolf3d
include/: wolf3d.h
maps/: map_first.fdf
src/: ft_game_js.c  ft_init_varible.c  ft_threads.c  ft_valid.c  game.c  init.c  jump.c  keys.c  keys_2.c  main.c  sdl.c  texture.c  valid_help.c  valid_help_2.c
